# find_devices

./: CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  config.json  config_schema.json  find_devices.cpp  find_devices.h  find_devices.hpp  install_dependencies.sh  main.cpp  strings.de-de.txt  strings.en-us.txt  strings.it-it.txt
.github/workflows/: cmake.yml
examples/: digirig_config.json  digirig_output_example.json  direwolf.conf  find_devices_scripting_example.sh  generic_config.json  output_example.json
